tdf#150966 oox export avoid bottom above top for text area

If bottom and top insets set so that the bottom edge of the resulting
text area is above the top edge, then LO and MS Office behave different
in how this is rendered. With commit e2169886 insets are converted on
import to make rendering in LO similar to MS Office, but the
implemented export has some problems, see analysis in bug report.

LibreOffice normalizes the resulting text area in case bottom edge is
above top edge. So this patch exports the insets so, that MS Office
gets a normalized resulting text area and will not apply its special
rules.

A roundtrip starting with pptx will not regenerate the old values but
will produce inset values, which give same rendering in MS Office than
in LO. Because the method is different now, the inset values have
changed and test testTextDistancesOOXML_Export is adapted. When you
compare the result with the screenshot on slide 2, you see that the
new method works as well.

The old method did not work for exporting an odp file. That is covered
by the new unit test. The docx unit test file covers the case, that
the export tweak was erroneously triggered.

Change-Id: I0091f284d9bdd635dd87ddb9e9b0e415cc0cc51e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142185
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>